src/cli/snapshots/brassclaw__cli__tests__long_help_output.snap
---
source: src/cli/mod.rs
expression: help
---
BrassClaw is a secure AI assistant.

Getting started:
  brassclaw onboard              # Interactive setup wizard (recommended for first run)
  brassclaw onboard --quick      # Quick setup: just pick a provider and model
  brassclaw models set-provider openai  # Switch to a specific provider
  brassclaw doctor               # Check your configuration

Common commands:
  brassclaw run                  # Start the agent
  brassclaw config list          # View all settings
  brassclaw models status        # Show current provider and model
  brassclaw models list          # List available providers

Use 'brassclaw <subcommand> --help' for details on any command.

Usage: brassclaw [OPTIONS] [COMMAND]

Commands:
  run         Run the AI agent
  onboard     Run interactive setup wizard (start here if new to BrassClaw)
  config      Manage app configuration settings
  registry    Browse/install extensions
  channels    Manage channels
  routines    Manage routines
  mcp         Manage MCP servers
  memory      Manage workspace memory
  pairing     Manage DM pairing
  profile     Manage deployment profiles
  service     Manage OS service
  skills      Manage skills
  hooks       Manage lifecycle hooks
  models      Manage LLM providers and models
  doctor      Run diagnostics (check if everything is configured correctly)
  logs        View and manage gateway logs
  status      Show system status
  completion  Generate completions
  import      Import from other AI systems
  login       Authenticate with a provider (re-login)
  acp         Manage ACP agents
  help        Print this message or the help of the given subcommand(s)

Options:
      --cli-only
          Run in interactive CLI mode only (disable other channels)

      --no-db
          Skip database connection (for testing)

  -m, --message <MESSAGE>
          Single message mode - send one message and exit

  -c, --config <CONFIG>
          Configuration file path (optional, uses env vars by default)

      --no-onboard
          Skip first-run onboarding check

      --auto-approve
          Auto-approve tool execution (shell, file writes, HTTP, etc.)

          Skips interactive approval prompts for standard tools. Destructive operations still require explicit approval. Other safeguards remain active: rate limits, hooks, authentication gates.

      --deployment-mode <MODE>
          Deployment mode: where BrassClaw is running and who owns the machine boundary.

          Wire names: `local_single_user`, `hosted_multi_tenant`, `enterprise_dedicated`. Falls back to `BRASSCLAW_DEPLOYMENT_MODE`, then to `local_single_user`.

      --runtime-profile <PROFILE>
          Requested runtime profile (#3045).

          Wire names: `secure_default`, `local_safe`, `local_dev`, `local_yolo`, `hosted_safe`, `hosted_dev`, `hosted_yolo_tenant_scoped`, `enterprise_safe`, `enterprise_dev`, `enterprise_yolo_dedicated`, `sandboxed`, `experiment`. Falls back to `BRASSCLAW_RUNTIME_PROFILE`, then to `secure_default`.

      --yolo-disclosure
          Acknowledge the disclosure required by `*_yolo*` profiles.

          Yolo profiles intentionally reduce approvals inside their authority boundary. The CLI must capture explicit operator confirmation — without this flag (or `BRASSCLAW_YOLO_DISCLOSURE=true`), any yolo profile selection fails closed.

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version
